samples/_failures_safe/1761343715_9ab2c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5ff5408.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b5ff5408.c:157:9: error: expected expression at end of input
  157 |         if (
      |         ^~
./samples/SAFE/__tmp_b5ff5408.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b5ff5408.c:157:9: error: expected declaration or statement at end of input
